test/kubernetes/e2e/features/upstreams/inputs/route-with-upstream.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: json-upstream
          port: 80
          kind: Upstream
          group: gloo.solo.io
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: jsonplaceholder.typicode.com
